--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -65,9 +65,9 @@ style='margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346'>
 <section>
   <h2>TeX Quality Typesetting</h2>
   <section class="fullwidth">
-    <div class='copy'>
+    <div class="copy">
       <p>TeX is the gold standard for typesetting of mathematical content.</p>
-      <p>MathLive provides a Javascript implementation that faithfully 
+      <p>MathLive provides a JavaScript implementation that faithfully 
         reproduces the output of TeX.</p>
       <p>MathLive supports over 800 TeX commands.</p>
     </div>
