doc: clarify CDN URL

--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -52,7 +52,7 @@ style='margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346'>
     }
     math-field { font-size: 32px; }
   </style>
-    <div slot="html">&lt;script src="//unpkg.com/mathlive/dist/mathlive.min.js"&gt;&lt;/script&gt;
+    <div slot="html">&lt;script src="//unpkg.com/mathlive"&gt;&lt;/script&gt;
 &lt;math-field virtual-keyboard-mode=manual&gt;
   x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}
 &lt;/math-field&gt;</div>
