--- a/src/index.html
+++ b/src/index.html
@@ -72,8 +72,8 @@ read_time: false
 
 </div>
 
-<script type='module'>
-  import {renderMathInDocument} from '//unpkg.com/mathlive/dist/mathlive.min.mjs';
+<script type="module">
+  import {renderMathInDocument} from '//unpkg.com/mathlive?module';
   window.addEventListener('DOMContentLoaded', (event) => {
       renderMathInDocument({ 
       renderAccessibleContent: false,
