fix: fixed SDK doc generation

--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -49,8 +49,8 @@ date: 2021-06-24
     with CortexJS I'm building a suite of modern tools for scientific computing,
     including <a href="/mathLive/">MathLive</a>, a web component for beautifully 
     typeset math equations 
-    and the <a href="/compute-engine/">Compute Engine</a> to perform symbolic computing and numerical 
-    evaluations in JavaScript environments.
+    and the <a href="/compute-engine/">Compute Engine</a> to perform symbolic 
+    computing and numeric evaluations in JavaScript environments.
   </p>
 
   <p>All the Cortex components are available under an Open Source license.</p>
