--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -180,7 +180,7 @@ head:
   } 
   button.toggle.is-on {
     color: #fff;
-    background: var(--primary);
+    background: var(--primary-color);
   }
   button.toggle svg {
     width: 24px;
@@ -221,7 +221,7 @@ head:
     display: none;
   }
   .segmented-control > input:checked + label {
-    background: var(--primary);
+    background: var(--primary-color);
     color: #fff;
     border-radius: 8px;
   }
