--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -91,7 +91,7 @@ head:
     padding: 5px;
     margin: 10px 0 10px 0;
     border-radius: 5px;
-    border: 1px solid #333;
+    border: var(--ui-border);
 
     min-height: 1em;
     padding-top: 0.5em;
