--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -29,10 +29,6 @@ head:
     --editable-border: #ddd;
     --on-editable: #333;
     --primary-light: #86a8cb;
-    --monospace: 'IBM Plex Mono', 'Fira Code', monospace;
-    --system: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
-      'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
-      'Helvetica Neue', sans-serif;
   }
 
   @media (prefers-color-scheme: dark) {
@@ -75,7 +71,7 @@ head:
   }
 
   kbd {
-    font-family: var(--monospace);
+    font-family: var(--monospace-font);
     background: #f4f4f4;
     color: #333;
     padding: 1px 5px;
@@ -83,10 +79,10 @@ head:
   }
 
   .output {
-    font-family: var(--monospace);
-    color: #f0c674;
+    font-family: var(--monospace-font);
+    color: var(--base-0a); /* #f0c674; */
 
-    background: #35434e;
+    background: var(--console-background);
 
     padding: 5px;
     margin: 10px 0 10px 0;
@@ -127,7 +123,7 @@ head:
   }
 
   h2 code {
-    font-family: var(--monospace);
+    font-family: var(--monospace-font);
     font-size: 1em;
   }
 
@@ -175,7 +171,7 @@ head:
     margin-left: 8px;
   }
   button.toggle:hover, button.toggle:active {
-    background: #dadada;
+    background: var(--ui-background-hover);
     color: #000;
   } 
   button.toggle.is-on {
@@ -209,11 +205,11 @@ head:
     width: 100%;
     margin: 0 auto;
     font-size: .75rem;
-    font-family: var(--system);
+    font-family: var(--ui-font);
     font-weight: 600;
-    border: 1px solid #ddd;
+    border: var(--ui-border);
     border-radius: 8px;
-    background: #eee;
+    background: var(--ui-background);
     padding: 4px;
   }
 
@@ -246,7 +242,7 @@ head:
     margin-left: 0;
   }
   .segmented-control label:hover {
-    background: #dadada;
+    background: var(--ui-background-hover);
   }
 
   code.label {
@@ -266,6 +262,25 @@ head:
     font-size: 16px;
     color: #aaa;
   }
+
+  @media (prefers-color-scheme: dark) {
+    kbd {
+      background: #333;
+      color: #f4f4f4;
+    }
+
+    .latex {
+      border: 1px solid #101010;
+      background: #333;
+    }
+
+
+    .segmented-control {
+
+
+    }
+  }
+
 
 </style>
 
