--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -9,11 +9,11 @@ head:
   modules:
     - /assets/js/code-playground.min.js
   stylesheets:
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.css
+    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/codemirror.min.css
   scripts:
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/codemirror.min.js
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/mode/javascript/javascript.min.js
-    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.48.0/mode/xml/xml.min.js
+    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/codemirror.min.js
+    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/mode/javascript/javascript.min.js
+    - https://cdnjs.cloudflare.com/ajax/libs/codemirror/5.65.3/mode/xml/xml.min.js
 ---
 <style>
 .fullwidth {
@@ -30,7 +30,7 @@ head:
 }
 </style>
 
-<img alt="MathLive" class="full-width" src="/assets/mathlive-1.png" 
+<img alt="MathLive" class="full-width" src="/assets/mathlive-1.jpg" 
 style="margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346">
 
 
@@ -49,8 +49,8 @@ style="margin-bottom:2em; border-radius:8px 8px 0 0; border:1px solid #203346">
     }
     math-field { font-size: 32px; }
   </style>
-    <div slot="html">&lt;script src="//unpkg.com/mathlive"&gt;&lt;/script&gt;
-&lt;math-field virtual-keyboard-mode=manual&gt;
+    <div slot="html">
+&lt;math-field virtual-keyboard-mode="manual"&gt;
   x=\frac{-b\pm\sqrt{b^2-4ac}}{2a}
 &lt;/math-field&gt;</div>
   </code-playground>
