feat: display version number in demo pages

--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -474,7 +474,7 @@ version: Compute Engine version
 
 
 
-    document.getElementById('version').innerText = version;
+    document.getElementById('version').innerText = version.computeEngine;
 
     const MAX_LINE_LENGTH = 64;
 
