feat: improved dark mode rendering; correctly display chapter masthead for SDK and some other pages

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ read_time: false
 layout: "sdk-documentation-layout"
 sidebar:
     - nav: "mathlive"
+chapter: mathlive
 # toc: true
 ---
 <svg xmlns="http://www.w3.org/2000/svg" style="display:none">
