feat: universal navigation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: "mathlive"
 read_time: false
 layout: "sdk-documentation-layout"
 sidebar:
-    - nav: "mathlive"
+    - nav: "universal"
 chapter: mathlive
 # toc: true
 ---
