--- a/src/_pages/compute-engine-demo.html
+++ b/src/_pages/compute-engine-demo.html
@@ -4,7 +4,7 @@ permalink: /compute-engine/demo/
 layout: single
 date: Last Modified
 sidebar:
-    - nav: "compute-engine"
+    - nav: "universal"
 version: Compute Engine version
 
 ---
@@ -68,7 +68,7 @@ version: Compute Engine version
   }
 
   kbd {
-    font-family: var(--monospace-font);
+    font-family: var(--monospace-font-family);
     background: #f4f4f4;
     color: #333;
     padding: 1px 5px;
@@ -76,7 +76,7 @@ version: Compute Engine version
   }
 
   .output {
-    font-family: var(--monospace-font);
+    font-family: var(--monospace-font-family);
     color: var(--base-0a); /* #f0c674; */
 
     background: var(--console-background);
@@ -120,7 +120,7 @@ version: Compute Engine version
   }
 
   h2 code {
-    font-family: var(--monospace-font);
+    font-family: var(--monospace-font-family);
     font-size: 1em;
   }
 
@@ -202,7 +202,7 @@ version: Compute Engine version
     width: 100%;
     margin: 0 auto;
     font-size: .75rem;
-    font-family: var(--ui-font);
+    font-family: var(--ui-font-family);
     font-weight: 600;
     border: var(--ui-border);
     border-radius: 8px;
