--- a/src/_pages/mathlive.html
+++ b/src/_pages/mathlive.html
@@ -4,7 +4,7 @@ title: MathLive
 permalink: /mathlive/
 read_time: false
 sidebar:
-    - nav: "mathlive"
+    - nav: "universal"
 head:
   modules:
     - /assets/js/code-playground.min.js
