feat: Additional Resources

--- a/src/_pages/about.html
+++ b/src/_pages/about.html
@@ -4,15 +4,17 @@ permalink: /about/
 read_time: false
 layout: single
 date: 2021-06-24
+sidebar:
+    - nav: "universal"
 ---
 <style>
   .signature {
-    list-style: none;
     padding: 0;
     margin: 0;
     line-height: 1;
   }
   .signature li {
+    list-style: none;
     padding-left: 2ex;
   }
   .signature li:first-of-type{
